<resources>
    <string name="app_name">MyDictionary</string>
    <string name="add_word">Add Word</string>
    <string name="setting">Setting</string>
    <string name="developer_info">Developer info</string>
    <string name="developer_name">Developer Name :</string>
    <string name="gihoon_kim">Gihoon Kim</string>
    <string name="developer_email">Developer Email :</string>
    <string name="my_email">rlgnsrla512@gmail.com</string>
    <string name="app_version">App Version :</string>
    <string name="my_version">Version 1.01</string>
    <string name="word">Word</string>
    <string name="parts_of_speech">Parts of Speech</string>
    <string name="meaning">Meaning</string>
    <string name="add_new_word">Add New Word</string>
    <string name="delete_word">Delete Word</string>
    <string name="text_size">Text Size</string>
    <string name="text_color">Text Color</string>
    <string name="background_color">Background Color</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="play_game">Play Game</string>
    <string name="question">Question :</string>
    <string name="enter">Enter</string>
</resources>